@@ -8,8 +8,8 @@ public class LexicalAnalyzer {
         CIRCLE,
         POINT,
         RADIUS,
-        DIAMETER,
         CHORD,
+        SEGMENT,
         ID,
         INTEGER,
         EXTRA
@@ -18,7 +18,7 @@ public class LexicalAnalyzer {
 
     private static final Pattern POINT_PATTERN = Pattern.compile("[тТ]очк[аиу]+");
     private static final Pattern CIRCLE_PATTERN = Pattern.compile("[кК]ол[оіа]+");
-    private static final Pattern DIAMETER_PATTERN = Pattern.compile("[дД]іаметр[аи]*");
+    private static final Pattern SEGMENT_PATTERN = Pattern.compile("[Вв]ідріз[окки]*");
     private static final Pattern RADIUS_PATTERN = Pattern.compile("[рР]адіус[аи]*");
     private static final Pattern CHORD_PATTERN = Pattern.compile("[хХ]орд[аиу]");
     private static final Pattern COORDINATE_PATTERN = Pattern.compile("-*\\d+");
@@ -32,7 +32,7 @@ public class LexicalAnalyzer {
             List<Pair> tokens = tokenize(sentence.trim());
             tokens = dropExtraTokens(tokens);
 
-            if (tokens.size() > 5 && tokens.get(0).getToken().toString().matches("CHORD|RADIUS|DIAMETER")) {
+            if (tokens.size() > 5 && tokens.get(0).getToken().toString().matches("CHORD|RADIUS|DIAMETER|SEGMENT")) {
                 tree.addAll(splitTokenGroups(tokens));
             } else {
                 tree.add(tokens);
@@ -53,14 +53,14 @@ public class LexicalAnalyzer {
             else if (CIRCLE_PATTERN.matcher(word).matches()) {
                 tokens.add(new Pair(Token.CIRCLE, word));
             }
-            else if (DIAMETER_PATTERN.matcher(word).matches()) {
-                tokens.add(new Pair(Token.DIAMETER, word));
-            }
             else if (RADIUS_PATTERN.matcher(word).matches()) {
                 tokens.add(new Pair(Token.RADIUS, word));
             }
             else if (CHORD_PATTERN.matcher(word).matches()) {
                 tokens.add(new Pair(Token.CHORD, word));
+            }
+            else if (SEGMENT_PATTERN.matcher(word).matches()) {
+                tokens.add(new Pair(Token.SEGMENT, word));
             }
             else if (COORDINATE_PATTERN.matcher(word).matches()) {
                 tokens.add(new Pair(Token.INTEGER, word));
@@ -97,39 +97,60 @@ public class LexicalAnalyzer {
         Pair curShapeToken = null;
 
         for (int i = 0; i < tokens.size(); i++) {
-
             Pair token = tokens.get(i);
-            if (token.getToken() == Token.CHORD || token.getToken() == Token.DIAMETER || token.getToken() == Token.RADIUS) {
 
-                if (currentGroup.size() == 5) result.add(new ArrayList<>(currentGroup));
+            // Check if the current token is a shape token (CHORD, DIAMETER, RADIUS, SEGMENT)
+            if (token.getToken() == Token.CHORD  || token.getToken() == Token.RADIUS || token.getToken() == Token.SEGMENT) {
 
-                if(!currentGroup.isEmpty() && !currentGroup.getFirst().equals(token)) currentGroup.clear();
+                // If the current group has 5 tokens, add it to the result
+                if (currentGroup.size() == 5) {
+                    result.add(new ArrayList<>(currentGroup));
+                }
+
+                // Clear the current group if it's not empty and the current token is different from the shape token
+                if (!currentGroup.isEmpty() && !currentGroup.get(0).equals(token)) {
+                    currentGroup.clear();
+                }
                 currentGroup.add(token);
-                curShapeToken = token;
-            }
-            else if (token.getToken() == Token.POINT && curShapeToken != null && i + 1 < tokens.size()) {
+                curShapeToken = token; // Update the current shape token
 
+            } else if (token.getToken() == Token.POINT && curShapeToken != null && i + 1 < tokens.size()) {
+                // Add the current point and the next ID token
                 currentGroup.add(token);
                 currentGroup.add(tokens.get(i + 1));
-                i++;
+                i++; // Skip to the next token
 
-                if (i + 1 < tokens.size() && tokens.get(i + 1).getToken() == Token.POINT && i + 2 < tokens.size() && tokens.get(i + 2).getToken() == Token.ID) {
+                // Check for another point and an ID token
+                if (i + 1 < tokens.size() && tokens.get(i + 1).getToken() == Token.POINT &&
+                        i + 2 < tokens.size() && tokens.get(i + 2).getToken() == Token.ID) {
+
+                    // Add the next point and ID to the current group
                     currentGroup.add(tokens.get(i + 1));
                     currentGroup.add(tokens.get(i + 2));
-                    i += 2;
+                    i += 2; // Move index forward
 
+                    // If the current group has 5 tokens, add it to the result and reset the group
                     if (currentGroup.size() == 5) {
                         result.add(new ArrayList<>(currentGroup));
                         currentGroup.clear();
-                        currentGroup.add(curShapeToken);
+                        currentGroup.add(curShapeToken); // Start a new group with the shape token
                     }
                 }
+            } else {
+                // Add other tokens directly to the current group
+                currentGroup.add(token);
             }
-            else currentGroup.add(token);
-
         }
+
+        // In case there's any remaining group that hasn't been added
+        if (currentGroup.size() == 5) {
+            result.add(new ArrayList<>(currentGroup));
+        }
+
         return result;
     }
+
+
 
 
 
